# ASD-Labor

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh  requirements.txt
.github/: dependabot.yml
.github/workflows/: ros.yml
doc/: stopline_msg.pptx
launch/: demo_keyboard.launch
maps/: fake_traj.yaml  track.yaml
meshes/: FloorBox.mtl
models/carolo_track/: model.config  model.sdf
models/carolo_track/materials/scripts/: track.material
models/cloverleaf_interchange/meshes/: cloverleaf.mtl
models/dumpster/meshes/: dumpster.dae
models/fake_traj/: model.config  model.sdf
models/fake_traj/materials/scripts/: track.material
models/gas_station/meshes/: gas_station.dae
models/house_2/meshes/: house_2.dae
msg/: ControlDebug.msg  LaneCoefficients.msg  Objects.msg  TrafficLightControl.msg  TrafficLightStatus.msg  Trajectory.msg
nodes/: control_node.py  planning_node.py  prius_model.py  sample_node.py  sensing_node.py  simulation_image_helper.py  traffic_light_simulator  traffic_light_simulator.py  traffic_light_simulator_visu.py  vehicle_control_gui
plugins/: PriusHybridPlugin.cc  PriusHybridPlugin.hh
rviz/: demo.rviz
urdf/: prius.urdf
worlds/: carolo.world  fake_traj.world  fake_traj_w_obstacle.world
