[tool.poetry]
name = "asd-lab"
version = "0.1.0"
description = ""
authors = ["Andreas Baulig <free.geronimo@hotmail.de>",
           "Wolfgang Bradfisch <w.bradfisch@gmx.de>",
           "Sungeeta Singh <susiit00@hs-esslingen.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
pre-commit = "^2.13.0"
pytest = "^6.2.4"
rope = "^0.19.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
